# BetaNet

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .markdownlint.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  Doxyfile  HTTP2_EMULATION_COMPLETE.md  HTX_NOISE_INTEGRATION_DOCUMENTATION.md  HTX_TICKETS_DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MISSION_ACCOMPLISHED.md  PATH_OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION.md  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SECURITY_MISSION_ACCOMPLISHED.md  SECURITY_NOTES.md  SYSTEM_OVERVIEW.md  VALIDATION_REPORT.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  betanet.sln  clean_duplicate_includes.py  cmake_install.cmake  debug_test.c  fix_logging_includes.py  technical-overview.md  test_cert.pem  test_key.pem
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  security_issue.md
.github/workflows/: ci.yml  docs.yml
cli/bnetc-cli/: CMakeLists.txt  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  bnetc-cli.vcxproj  bnetc-cli.vcxproj.filters  main.c
cmake/: CMakeLists.txt
docs/: CODACY_INTEGRATION.md  DEVELOPMENT.md  DEVELOPMENT_ROADMAP_PHASE2.md  ROADMAP.md  SECURITY_FIXES_SUMMARY.md  SECURITY_ROADMAP.md
include/betanet/: betanet.h  gov_protocol.h  http2_emulation.h  htx_calibration.h  htx_frames.h  htx_noise_integration.h  htx_tickets.h  htx_transport.h  path_optimization.h  pay.h  payment.h  pq_hybrid.h  scion.h  secure_log.h  secure_utils.h
libbetanetc/: CMakeLists.txt  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  betanet.c  betanetc.vcxproj  betanetc.vcxproj.filters  cmake_install.cmake
libbetanetc/betanetc.dir/Debug/betanetc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  betanetc.lastbuildstate
memory-bank/: activeContext.md  decisionLog.md  progress.md
scripts/: security_remediation.py
src/: pq_hybrid.c  scion_enhanced.c
src/boot/: CMakeLists.txt  boot.c  boot.h
src/gov/: CMakeLists.txt  gov.c  gov.h  gov_protocol.c
src/htx/: CMakeLists.txt  framing.c  framing.h  http2_emulation.c  htx.c  htx.h  htx_frames.c  htx_frames.c.backup  htx_noise_integration.c  htx_tickets.c  htx_transport.c  origin_calibration.c  quic.c  quic.h  ticket.c  ticket.h
src/noise/: CMakeLists.txt  noise.c  noise.h
src/path/: CMakeLists.txt  naming.c  naming.h  path.c  path.h  path_optimization.c  scion.c
src/pay/: CMakeLists.txt  pay.c  pay.h
src/shape/: CMakeLists.txt  shape.c  shape.h
src/util/: CMakeLists.txt  cert_utils.c  cert_utils.h  performance.c  performance.h  platform.h  scion.c  secure_log.c  secure_utils.c  util.c  util.h
tests/: CMakeLists.txt  http2_emulation_test.c
tests/integration/: CMakeLists.txt  betanet_v1_1_compliance.c  end_to_end_test.c  htx_frames_test.c  htx_http2_integration_test.c  htx_noise_integration_test.c  htx_tickets_test.c  integration_path_htx.c  noise_handshake_test.c  performance_test.c  scion_test.c  tls_server_demo.c
tests/interop/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  interop_protocol_test.c  interop_protocol_test.vcxproj  interop_protocol_test.vcxproj.filters
tests/performance/: CMakeLists.txt  htx_noise_performance_test.c
tests/unit/: CMakeLists.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  api_smoke_test.c  cmake_install.cmake  fingerprint_regression_test.c  fingerprint_regression_test.vcxproj  fingerprint_regression_test.vcxproj.filters  http2_emulation_test.c  pq_hybrid_handshake_test.c  protocol_regression_test.c  protocol_regression_test.vcxproj  protocol_regression_test.vcxproj.filters  test_gov_protocol.c  test_htx_calibration.c  test_htx_calibration_mock.c  test_htx_calibration_simple.c  test_htx_transport.c  test_minimal.c  test_path_optimization.c  test_scion_basic.c  ticket_parser_fuzz.c  ticket_parser_fuzz.vcxproj  ticket_parser_fuzz.vcxproj.filters
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
